force-app/main/default/objects/Persons_Involved__c/Persons_Involved__c.object-meta.xml
<CustomObject>
    <label>Persons Involved</label>
    <nameField>
        <displayFormat>PIV-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persons Involved</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>