force-app/main/default/objects/Persons_Involved__c/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <inlineHelpText>Either Phone or Email</inlineHelpText>
    <label>Contact Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>