force-app/main/default/objects/Persons_Involved__c/fields/Member_Tier__c.field-meta.xml
<CustomField>
    <fullName>Member_Tier__c</fullName>
    <label>Member Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traveler</fullName>
            </value>
            <value>
                <fullName>Adventurer</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Insighter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>