force-app/main/default/objects/Persons_Involved__c/fields/Passenger_Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Seat_Number__c</fullName>
    <label>Passenger Seat Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>